--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.9.0",
+    "@mui/material": "^5.9.2",
+    "@mui/system": "^5.9.2",
     "@reduxjs/toolkit": "^1.8.3",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@testing-library/jest-dom": "^5.16.4",
