--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "axios": "^0.27.2",
     "express": "^4.18.1",
     "react": "^18.2.0",
+    "react-currency-format": "^1.1.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
