--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@mui/material": "^5.9.2",
     "@mui/system": "^5.9.2",
     "@reduxjs/toolkit": "^1.8.3",
+    "@stripe/react-stripe-js": "^1.10.0",
+    "@stripe/stripe-js": "^1.34.0",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -25,7 +27,6 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "react-stripe-checkout": "^2.6.3",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
