--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "eject": "react-scripts eject",
     "start": "cd backend && yarn start"
   },
+  "engines": {
+    "node": "16.15.0"
+},
   "eslintConfig": {
     "extends": [
       "react-app",
