--- a/package.json
+++ b/package.json
@@ -30,11 +30,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start-client": "react-scripts start",
-    "build": "react-scripts build && (cd backend && npm install)",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "start": "cd backend && npm start"
+    "eject": "react-scripts eject"
   },
   "engines": {
     "node": "16.15.0"
@@ -65,5 +64,6 @@
   "main": "postcss.config.js",
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "proxy": "http://localhost:3000"
 }
