--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.1",
     "react": "^18.2.0",
     "react-currency-format": "^1.1.0",
@@ -38,7 +39,7 @@
   },
   "engines": {
     "node": "16.15.0"
-},
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
