--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "cd backend && npm start",
+    "start": "react-scripts start",
     "start-client": "react-scripts start",
     "build": "react-scripts build && (cd backend && npm install)",
     "test": "react-scripts test",
