--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "cd backend && npm start",
     "start-client": "react-scripts start",
-    "build": "react-scripts build && (cd backend && npm install)",
+    "build": "react-scripts build && (cd backend && npm install)",		
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
