--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "scripts": {
     "start": "cd backend && npm start",
-    "start-client": "react-scripts start",
+    "start-client": "set PORT=5000 && react-scripts start",
     "build": "react-scripts build && (cd backend && npm install)",		
     "test": "react-scripts test",
     "eject": "react-scripts eject"
