--- a/package.json
+++ b/package.json
@@ -66,5 +66,7 @@
   "main": "postcss.config.js",
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "proxy": "http://localhost:5000"
+
 }
