--- a/package.json
+++ b/package.json
@@ -66,7 +66,5 @@
   "main": "postcss.config.js",
   "author": "",
   "license": "ISC",
-  "description": "",
-  "proxy": "http://localhost:5000"
-
+  "description": ""
 }
